welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if(occur == 3){
        ^